--- a/frontend/metas.html
+++ b/frontend/metas.html
@@ -121,7 +121,7 @@
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Fechar</button>
-                    <button type="button" class="btn btn-primary" id="salvarAlteracoes">Salvar Alterações</button>
+                    <button type="button" class="btn btn-primary" id="salvarAlteracoes">Salvar</button>
                 </div>
             </div>
         </div>
@@ -281,7 +281,7 @@
                     </div>
                     <div class="dados-transacoes">
                         <label>Valor da Transação</label>
-                        <input type="number" placeholder="Quantos Reais?" class="valor-transacao">
+                        <input type="text" placeholder="Quantos Reais?" class="valor-transacao moneyInput">
                         <label>Categoria</label>
                         <!--Categorias de Despesas-->
                         <div class="grid-categorias-despesa">
