--- a/frontend/historico-transacoes.html
+++ b/frontend/historico-transacoes.html
@@ -184,7 +184,7 @@
                     </div>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Fechar</button>
-                        <button type="button" class="btn btn-primary" id="salvarAlteracoes">Salvar Alterações</button>
+                        <button type="button" class="btn btn-primary" id="salvarAlteracoes">Salvar</button>
                     </div>
                 </div>
             </div>
@@ -212,7 +212,7 @@
                         </div>
                         <div class="novos-dados-transacoes">
                             <label>Novo Valor da Transação</label>
-                            <input type="number" placeholder="Quantos Reais?" class="valor-transacao">
+                            <input type="text" placeholder="Quantos Reais?" class="valor-transacao moneyInput">
                             <!--Modal para alterar despesa ainda está em construção-->
                         </div>
                     </div>
@@ -241,7 +241,7 @@
                         </div>
                         <div class="dados-transacoes">
                             <label>Valor da Transação</label>
-                            <input type="number" placeholder="Quantos Reais?" class="valor-transacao">
+                            <input type="text" placeholder="Quantos Reais?" class="valor-transacao moneyInput">
                             <label>Categoria</label>
                             <!--Categorias de Despesas-->
                             <div class="grid-categorias-despesa">
