--- a/frontend/relatorios.html
+++ b/frontend/relatorios.html
@@ -129,81 +129,38 @@
                     <h2 class="modal-title" id="addModalLabel">Adicionar Transação</h2>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
-                <div class="modal-body">
-                    <div class="escolha-tipo-transacoes">
-                        <label class="label-despesa">
-                            <input type="radio" name="tipo-transacao" value="despesa" id="btn-despesa" checked>
-                            Despesa
-                        </label>
-                        <label class="label-receita">
-                            <input type="radio" name="tipo-transacao" value="receita" id="btn-receita">
-                            Receita
-                        </label>
-                    </div>
-                    <div class="dados-transacoes">
-                        <label>Valor da Transação</label>
-                        <input type="text" placeholder="Quantos Reais?" class="valor-transacao moneyInput">
-                        <label>Categoria</label>
-                        <!--Categorias de Despesas-->
-                        <div class="grid-categorias-despesa">
-                            <div class="categoria-opcao">
-                                <input type="radio" id="alimentacao" name="categoria" value="alimentacao">
-                                <label for="alimentacao">Alimentação</label>
-                              </div>
-                              <div class="categoria-opcao">
-                                <input type="radio" id="transporte" name="categoria" value="transporte">
-                                <label for="transporte">Transporte</label>
-                              </div>
-                              <div class="categoria-opcao">
-                                <input type="radio" id="lazer" name="categoria" value="lazer">
-                                <label for="lazer">Lazer</label>
-                              </div>
-                              <div class="categoria-opcao">
-                                <input type="radio" id="jogos" name="categoria" value="jogos">
-                                <label for="jogos">Jogos</label>
-                              </div>   
-                              <div class="categoria-opcao">
-                                <input type="radio" id="livros" name="categoria" value="livros">
-                                <label for="livros">Livros</label>
-                              </div>   
-                              <div class="categoria-opcao">
-                                <input type="radio" id="financiamento" name="categoria" value="financiamento">
-                                <label for="financiamento">Financiamento</label>
-                              </div>
-                              <div class="categoria-opcao">
-                                <input type="radio" id="salao-de-beleza" name="categoria" value="salao-de-beleza">
-                                <label for="salao-de-beleza">Salão de Beleza</label>
-                              </div>  
-                        </div>     
-                        <div class="grid-categorias-receita">
-                            <div class="categoria-opcao">
-                                <input type="radio" id="salario" name="categoria" value="salario">
-                                <label for="salario">Salário</label>
-                            </div>
-                            <div class="categoria-opcao">
-                                <input type="radio" id="pix" name="categoria" value="pix">
-                                <label for="pix">Pix</label>
-                            </div>
-                            <div class="categoria-opcao">
-                                <input type="radio" id="renda-extra" name="categoria" value="renda-extra">
-                                <label for="renda-extra">Renda Extra</label>
-                            </div>
-                        </div>     
-                        <span class="adicionar-categoria">Adicionar Categoria</span>
-                        <input type="text" id="nova-categoria" placeholder="Digite nova categoria" style="display: none;"> <!--Inicialmente invisível-->
-                        <button id="btn-add-categoria" style="display: none;">Adicionar</button> <!--Inicialmente invisível-->
-                        <label>Conta</label>
-                        <div class="grid-conta-selecao">
-                            <div class="conta-opcao">
-                                <input type="radio" id="bradesco" name="conta" value="bradesco">
-                                <label for="bradesco">Bradesco</label>
-                            </div>
+                <form id="criarTransacao">
+                    <div class="modal-body">
+                        <div class="escolha-tipo-transacoes">
+                            <label class="label-despesa">
+                                <input type="radio" name="tipoTransacao" value="debit" id="btn-despesa" checked>
+                                <span>Despesa</span>
+                            </label>
+                            <label class="label-receita">
+                                <input type="radio" name="tipoTransacao" value="credit" id="btn-receita">
+                                <span>Receita</span>
+                            </label>
                         </div>
-                        <label>Data da Transação</label>
-                        <input type="date" class="data-transacao">
-                        <button class="adicionar-transacao" id="add-transacao">Adicionar Transação</button>
+                        <div class="dados-transacoes">
+                            <label>Valor da Transação</label>
+                            <input type="text" placeholder="Quantos Reais?" class="valor-transacao moneyInput" id="valorTransacao">
+
+                            <label>Categoria</label>
+                            <select class="form-control mt-1" id="selectCategoria"></select>
+
+                            <label>Conta Bancaria</label>
+                            <select class="form-control mt-1" id="selectConta"></select>
+
+                            <label>Meta (opcional)</label>
+                            <select class="form-control mt-1" id="selectMeta"></select>
+
+                            <label>Data da Transação</label>
+                            <input type="date" class="data-transacao" id="dataTransacao">
+
+                            <input type="submit" class="adicionar-transacao mt-4" value="Adicionar Transação">
+                        </div>
                     </div>
-                </div>
+                </form>
             </div>
         </div>
     </div>
