tela de visualizar transações

--- a/frontend/historico-transacoes.html
+++ b/frontend/historico-transacoes.html
@@ -107,54 +107,13 @@
                         </tr>
                     </thead>
     
-                    <tbody id="table-body">
-                        <tr data-bs-toggle="modal" data-bs-target="#altModal">
-                            <td><img src="img/despesa.png" alt="Despesa" style="width: 16px; height: 16px; vertical-align: middle;">
-                                Despesa </td>
-                            <td id="categoria">Mercado</td>
-                            <td id="data">07/10/2024</td>
-                            <td id="conta">Bradesco</td>
-                            <td id="valor">R$ 100,00</td>
-                        </tr>
-                        <tr data-bs-toggle="modal" data-bs-target="#altModal">
-                            <td><img src="img/receita.png" alt="Receita" style="width: 16px; height: 16px; vertical-align: middle;">
-                            Receita </td>
-                            <td>Pix</td>
-                            <td>09/10/2024</td>
-                            <td>Bradesco</td>
-                            <td>R$ 200,00</td>
-                        </tr>
-                        <tr data-bs-toggle="modal" data-bs-target="#altModal">
-                            <td><img src="img/receita.png" alt="Receita" style="width: 16px; height: 16px; vertical-align: middle;">
-                                Receita </td>
-                            <td>Pix</td>
-                            <td>09/10/2024</td>
-                            <td>Bradesco</td>
-                            <td>R$ 200,00</td>
-                        </tr>
-                        <tr data-bs-toggle="modal" data-bs-target="#altModal">
-                            <td><img src="img/receita.png" alt="Receita" style="width: 16px; height: 16px; vertical-align: middle;">
-                                Receita </td>
-                            <td>Pix</td>
-                            <td>09/10/2024</td>
-                            <td>Bradesco</td>
-                            <td>R$ 200,00</td>
-                        </tr>
-                        <tr data-bs-toggle="modal" data-bs-target="#altModal">
-                            <td><img src="img/receita.png" alt="Receita" style="width: 16px; height: 16px; vertical-align: middle;">
-                                Receita </td>
-                            <td>Pix</td>
-                            <td>09/10/2024</td>
-                            <td>Bradesco</td>
-                            <td>R$ 200,00</td>
-                        </tr>                          
-                    </tbody>
+                    <tbody id="table-body"></tbody>
                 </table>
-                <div class="paginacao">
+                <!-- <div class="paginacao">
                     <button onclick="prevPage()"> <  </button>
                     <span id="numero-pagina">1</span> de <span id="total-paginas">1</span>
                     <button onclick="nextPage()"> > </button>
-                </div>
+                </div> -->
             </div>
         </div>
         <!--Fim do conteúdo da parte das transações, título da página, imagem e nome de usuário etc-->
