Botão para deslogar

--- a/frontend/contas.html
+++ b/frontend/contas.html
@@ -60,6 +60,7 @@
                     <img src="img/perfil.png" alt="Perfil" class="perfil-img" id="perfil-icone" data-bs-toggle="modal"
                         data-bs-target="#perfilModal">
                     <span id="nomeUsuarioDisplay">Usuário</span> <!-- Nome de usuário -->
+                    <i class="fas fa-sign-out-alt"></i>
                 </div>
             </header>
 
