--- a/frontend/historico-transacoes.html
+++ b/frontend/historico-transacoes.html
@@ -54,6 +54,7 @@
                 <div class="perfil-wrapper">
                     <img src="img/perfil.png" alt="Perfil" class="perfil-img" data-bs-toggle="modal" data-bs-target="#perfilModal">
                     <span id="nomeUsuarioDisplay">Usuário</span>
+                    <i class="fas fa-sign-out-alt"></i>
                 </div>
             </header>
 
