--- a/frontend/index.html
+++ b/frontend/index.html
@@ -36,7 +36,7 @@
             <div class="form-box">
                 <h2>Login</h2>
                 <div class="line"></div>
-                <form action="dashboard.html">
+                <form>
                     <div class="input-box">
                         <span>E-mail</span>
                         <!-- COLOCAR REQUIRED -->
