--- a/frontend/cadastro.html
+++ b/frontend/cadastro.html
@@ -60,7 +60,7 @@
                 </div>
 
                 <div class="input-box">
-                    <p>Já possui uma Conta? <a href="index.html">Entrar</a></p>
+                    <p>Já possui uma conta? <a href="index.html">Entrar</a></p>
                 </div>
             </form>
         </div>
