--- a/frontend/index.html
+++ b/frontend/index.html
@@ -49,19 +49,19 @@
                         <input type="password" id="password" placeholder="******">
                     </div>
 
-                    <div class="remember">
+                    <!--div class="remember">
                         <label>
                             <input type="checkbox"> Lembrar de mim
                         </label>
                         <a href="esqueceusenha.html">Esqueceu a Senha?</a>
-                    </div>                    
+                    </div-->                    
 
                     <div class="input-box">
                         <input type="submit" value="Entrar">
                     </div>
 
                     <div class="input-box">
-                       <p>Não Tem Uma Conta? <a href="cadastro.html">Cadastrar-se</a></p>
+                       <p>Não tem uma conta? <a href="cadastro.html">Cadastrar-se</a></p>
                     </div>
                 </form>
             </div>
