recupera nome do usuário e agora deleta a transacao

--- a/frontend/contas.html
+++ b/frontend/contas.html
@@ -59,7 +59,7 @@
                 <div class="perfil-wrapper">
                     <img src="img/perfil.png" alt="Perfil" class="perfil-img" id="perfil-icone" data-bs-toggle="modal"
                         data-bs-target="#perfilModal">
-                    <span id="nomeUsuarioDisplay">Usuário</span> <!-- Nome de usuário -->
+                        <span class="mr-5" id="nomeUsuarioDisplay">Usuário</span> <!-- Nome de usuário -->
                     <i class="fas fa-sign-out-alt"></i>
                 </div>
             </header>
@@ -281,7 +281,6 @@
                         </div>
                     </div>
                     <div class="modal-footer">
-                        <button type="button" class="btn btn-danger" id="excluirConta">Excluir Conta</button>
                         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
                         <input value="Salvar" type="submit" class="btn btn-primary" id="salvarEdicaoConta">
                     </div>
