--- a/frontend/historico-transacoes.html
+++ b/frontend/historico-transacoes.html
@@ -54,7 +54,7 @@
                 <h1>Transações</h1>
                 <div class="perfil-wrapper">
                     <img src="img/perfil.png" alt="Perfil" class="perfil-img" data-bs-toggle="modal" data-bs-target="#perfilModal">
-                    <span id="nomeUsuarioDisplay">Usuário</span>
+                    <span class="mr-5" id="nomeUsuarioDisplay">Usuário</span>
                     <i class="fas fa-sign-out-alt"></i>
                 </div>
             </header>
@@ -106,6 +106,7 @@
                             <th>Data</th>
                             <th>Conta</th>
                             <th>Valor</th>
+                            <th></th>
                         </tr>
                     </thead>
     
