--- a/frontend/metas.html
+++ b/frontend/metas.html
@@ -54,7 +54,7 @@
                 <h1>Metas</h1>
                 <div class="perfil-wrapper">
                     <img src="img/perfil.png" alt="Perfil" class="perfil-img" data-bs-toggle="modal" data-bs-target="#perfilModal">
-                    <span id="nomeUsuarioDisplay">Usuário</span>
+                    <span class="mr-5" id="nomeUsuarioDisplay">Usuário</span>
                     <i class="fas fa-sign-out-alt"></i>
                 </div>  
             </header>
